--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="header-inner-container">
                 <div class="header-text-container">
-                    <h1>AWESOME STARTUP EMPLOYEE DIRECTORY</h1>
+                    <h1> STARTUP EMPLOYEE DIRECTORY</h1>
                 </div>
                 <div class="search-container">
                 </div>
